--- a/client/views/merchants/merchant_page.html
+++ b/client/views/merchants/merchant_page.html
@@ -1,7 +1,8 @@
 <template name="merchantPage">
 	{{#if merchant.banner}}
 	<div class="merchant-banner">
-		<a href="{{merchant.url}}" target="_blank" title=""><img src="{{merchant.banner}}" alt=""></a>
+		<a href="{{merchant.url}}" target="_blank" title="">
+		<img src="{{merchant.banner}}" alt="" style="width:100%;"></a>
 	</div>
 	{{/if}}
 
