--- a/client/views/admin.html
+++ b/client/views/admin.html
@@ -135,11 +135,12 @@
 					</td>
 
 					<td>{{cost}}</td>
-					<td>{{total shippingcost postagecost handlingfee cost}}</td>
+					<td>{{total cost}}</td>
 					<td>{{paid}}</td>
-					<td>{{topup shippingcost postagecost handlingfee cost paid}}</td>
+					<td>{{topup cost paid}}</td>
 
 					<td>
+						{{statusName}}
 						<span class="label {{orderStatusIcon 0}}"><i class="icon-play"></i></span>
 						<span class="label {{orderStatusIcon 1}}">$</span>
 						
@@ -236,7 +237,7 @@
 				<div class="row-fluid">
 					<label class="span4">Thumbnail URL</label>
 					<div class="span8">
-						<input class="input-block-level" type="url" name="banner" value="{{thumbnail}}" >
+						<input class="input-block-level" type="url" name="thumbnail" value="{{thumbnail}}" >
 					</div>
 				</div>
 				<div class="row-fluid">
