--- a/client/views/merchants/merchant_list.html
+++ b/client/views/merchants/merchant_list.html
@@ -1,10 +1,25 @@
 <template name="merchantList">
-	{{#each allMerchants}}
-	
-	<img src="{{banner}}" alt="">
-	<hr>
-	<a href="{{merchantPagePath this}}">{{_id}}</a>
-	{{speed}}
+	<div class="row-fluid">
+		<div class="btn-group">
+			<button class="btn filter-open">Open Sprees</button>
+			<button class="btn filter-upcoming">Upcoming</button>
+			<button class="btn filter-all">See All</button>
+			<!-- <button class="btn filter-x">Filter x</button> -->
+			<button class="btn sort-popularity">Sort by Popularity</button>
+		</div>
+	</div>
+	<div id="isotope">
+		{{#each allMerchants}}
+		<div class="item {{#if open}}open{{else}}upcoming{{/if}}" popularity="{{popularity}}">
+			<a href="{{merchantPagePath this}}">
+				<img src="{{banner}}" alt="">
+			</a>
+		</div>
+		{{/each}}
+	</div>
+</template>
+
+<!-- {{speed}}
 	{{shipping}}
 	{{currency}}
 	{{cap}}
@@ -15,7 +30,4 @@
 	Status: Open
 	{{else}}
 	Status: Closed
-	{{/if}}
-	
-	{{/each}}
-</template>
+	{{/if}} -->
