--- a/client/views/merchants/merchant_list.html
+++ b/client/views/merchants/merchant_list.html
@@ -12,7 +12,7 @@
 		{{#each allMerchants}}
 		<div class="item {{#if open}}open{{else}}upcoming{{/if}}" popularity="{{popularity}}">
 			<a href="{{merchantPagePath this}}">
-				<img src="{{banner}}" alt="">
+				<img src="{{thumbnail}}" alt="">
 			</a>
 		</div>
 		{{/each}}
