--- a/client/views/users/user_page.html
+++ b/client/views/users/user_page.html
@@ -148,7 +148,7 @@
 			<div class="control-group">
 				<label class="control-label" for="email">Email Address <span class="superscript">*</span></label>
 				<div class="controls">
-					<input id="email" name="profile-email" type="email" placeholder="jane@gmail.com" class="input-block-level" required="" value="{{currentUser.profile.email}}">
+					<input id="email" name="profile-email" spellcheck="false" type="email" placeholder="jane@gmail.com" class="input-block-level" required="" value="{{currentUser.profile.email}}">
 
 				</div>
 			</div>
